[build-system]
requires = [
    "setuptools>=61",
    "setuptools_scm[toml]>=6.2",
]
build-backend = "setuptools.build_meta"

[project]
name = "pyserv"
description = "A collection of simple servers for HTTP, WSGI, and TFTP"
dynamic = ["version"]
readme = "README.rst"
license = "MIT"  # >=3.9 only

authors = [
    {name = "Stephen Arnold"},
    {email = "stephen.arnold42@gmail.com"},
]

keywords = ["OTA", "http", "httpd", "tftpd", "wsgi", "async", "tui"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Embedded Systems",
    "Topic :: Software Development :: Testing",
    "Environment :: Console",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "platformdirs",
    "daemonizer @ git+https://github.com/sarnold/python-daemonizer.git@0.4.1#69d4c9b6f3916cd5ae87c8b3a78eca1015eeed0f",
    "tftpy @ git+https://github.com/VCTLabs/tftpy.git@0.8.2.1#58d1f5c60af2e3759fbb137b89816954d8ea6bc9",
    "picotui @ git+https://github.com/sarnold/picotui.git@v1.2.1.1#ecc7c111ab69819134b9e759364faeca5f3190c1",
    "psutil",
    "py3tftp",
    "pygtail @ git+https://github.com/VCTLabs/pygtail.git@0.14.0.1#7026c3a2165e19ed705fffbadcb2e5858f7f12c7",
    "scapy",
]

requires-python = ">=3.9"

[project.optional-dependencies]
dev = [
    "flake8",
    "isort",
    "mypy==0.990",
    "black >= 22.3.0",
    "pylint >= 3.1.0",
]
cov = [
    "coverage[toml]",
    "coverage_python_version",
]
doc = [
    "semaver",
    "sphinx",
    "sphinx_git",
    "sphinxcontrib.apidoc",
    "myst-parser",
    "sphinx-nefertiti",
    "sphinxcontrib.mermaid",
    "sphinx_rtd_theme<3.0.0",
]
test = [
    "pytest",
    "pytest-cov",
    "httptest",
    "requests",
]
tui = [
    "textual-dev",
]

[project.scripts]
serv = "pyserv.server:main"
tftpd = "pyserv.tftpd:main"
wsgi = "pyserv.wsgi:main"

[project.urls]
Homepage = "https://github.com/sarnold/pyserv"
Repository = "https://github.com/sarnold/pyserv.git"
Issues = "https://github.com/sarnold/pyserv/issues"
Changelog = "https://github.com/sarnold/pyserv/blob/master/CHANGELOG.rst"

[tool.setuptools]
package-dir = {"" = "src"}

script-files = [
    "scripts/atftpdaemon",
    "scripts/httpdaemon",
    "scripts/tftpdaemon",
    "scripts/daemontui",
    "scripts/process_md_urls.py",
]

[tool.setuptools_scm]

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests",]
log_cli =  false
doctest_optionflags = ["ELLIPSIS", "NORMALIZE_WHITESPACE",]
addopts = "--strict-markers"
markers = "subscript"
filterwarnings = [
    "ignore:currentThread:DeprecationWarning",
    "ignore:co_lnotab:DeprecationWarning",
]

[tool.coverage.run]
branch = true
source = ["src"]
omit = [
    "tests",
    ".tox",
]

[tool.coverage.paths]
source = ["src"]

[tool.coverage.report]
fail_under = 80
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "raise AssertionError",
    "if typing.TYPE_CHECKING:",
    "if TYPE_CHECKING:",
]

[tool.black]
line-length = 90
skip-string-normalization = true
include = '\.py$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | docs
  | dist
  | tests
)/
'''

[tool.pycln]
all = true

[tool.isort]
line_length = 72
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.bandit]
exclude_dirs = ["docs"]
skips = ["B104"]
