[metadata]
name = pyserv
version = attr: setuptools_scm.get_version
description = A collection of simple servers for HTTP, WSGI, and TFTP
url = https://github.com/sarnold/pyserv
author = Stephen L Arnold
email = nerdboy@gentoo.org
long_description = file: README.rst
long_description_content_type = text/rst; charset=UTF-8
license: MIT
license_expression = MIT
license_files = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Environment :: Console
    Topic :: Software Development
    Topic :: Software Development :: Testing

keywords =
    OTA
    http
    httpd
    tftpd
    wsgi

[options]
python_requires = >= 3.6

setup_requires =
    setuptools_scm[toml]

install_requires =
    daemonizer @ https://github.com/sarnold/python-daemonizer/releases/download/0.4.0/daemonizer-0.4.0.tar.gz
    platformdirs
    tftpy @ https://github.com/VCTLabs/tftpy/releases/download/0.8.2.1/tftpy-0.8.2.1.tar.gz

packages = find_namespace:
package_dir =
    =src

scripts =
    scripts/httpdaemon
    scripts/tftpdaemon

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    serv = pyserv.server:main
    tftpd = pyserv.tftpd:main
    wsgi = pyserv.wsgi:main

# extra deps are included here mainly for local/venv installs using pip
# otherwise deps are handled via tox, ci config files or pkg managers
[options.extras_require]
doc =
    sphinx
    sphinx_git
    recommonmark
    sphinx_rtd_theme
    sphinxcontrib-apidoc
test =
    pytest
    pytest-cov
    httptest
    requests
cov =
    coverage[toml]
    coverage_python_version
all =
    %(cov)s
    %(doc)s
    %(test)s

[check]
metadata = true
restructuredtext = true
strict = false

[check-manifest]
ignore =
    .gitattributes
    .gitignore
    .pre-commit-config.yaml

[flake8]
exclude =
    .git,
    __pycache__,
    build,
    dist,
    docs,
    tests

max-line-length = 90
