[metadata]
name = pyserv
description = A collection of simple servers for HTTP, WSGI, and TFTP
url = https://github.com/sarnold/pyserv
author = Stephen L Arnold
email = nerdboy@gentoo.org
long_description = file: README.rst
long_description_content_type = text/x-rst
license: MIT
license_expression = MIT
license_files = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Environment :: Console
    Topic :: Software Development
    Topic :: Software Development :: Testing

keywords =
    OTA
    http
    httpd
    tftpd
    wsgi
    async

project_urls =
    Bug Reports = https://github.com/sarnold/pyserv/issues
    Source = https://github.com/sarnold/pyserv.git

[options]
python_requires = >= 3.8

setup_requires =
    setuptools_scm[toml]

install_requires =
    daemonizer @ git+https://github.com/sarnold/python-daemonizer.git@1.1.7#egg=daemonizer
    logwatcher @ git+https://github.com/sarnold/pylogtailer.git@v0.5.4#egg=logwatcher
    tftpy @ git+https://github.com/VCTLabs/tftpy.git@0.8.6.2#egg=tftpy
    picotui @ git+https://github.com/sarnold/picotui.git@v1.2.3.2#egg=picotui
    py3tftp
    platformdirs
    scapy

packages = find_namespace:
package_dir =
    =src

scripts =
    scripts/atftpdaemon
    scripts/httpdaemon
    scripts/tftpdaemon
    # scripts/daemontui

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    serv = pyserv.server:main
    tftpd = pyserv.tftpd:main
    wsgi = pyserv.wsgi:main

# extra deps are included here mainly for local/venv installs using pip
# otherwise deps are handled via tox, ci config files or pkg managers
[options.extras_require]
dev =
    flake8
    isort
    mypy >= 0.990
    black >= 22.3.0
    pylint >= 3.1.0
doc =
    sphinx
    sphinx_git
    myst-parser
    sphinx-nefertiti
    sphinx_rtd_theme<3.0.0
    sphinxcontrib-apidoc
test =
    pytest
    pytest-cov
    httptest
    requests
cov =
    coverage[toml]
    coverage_python_version
tui =
    textual-dev
all =
    %(cov)s
    %(doc)s
    %(test)s

[check]
metadata = true
restructuredtext = true
strict = false

[check-manifest]
ignore =
    .gitattributes
    .gitignore
    .pre-commit-config.yaml

[flake8]
exclude =
    .git,
    __pycache__,
    build,
    dist,
    docs,
    tests

max-line-length = 90
per-file-ignores = daemontui.py:B023
